RESOLVED FIXED305572
[GTK][WPE] Vinted is crashing when assertions are enabled
https://bugs.webkit.org/show_bug.cgi?id=305572
Summary [GTK][WPE] Vinted is crashing when assertions are enabled
Simon Pena
Reported 2026-01-15 09:11:37 PST
When built with assertions enabled, MiniBrowser, for both GTK and WPE, crashes navigating to https://www.vinted.co.uk ERROR: Failed to make thread real time: GDBus.Error:org.freedesktop.DBus.Error.Failed: No such file or directory ../../../Source/WTF/wtf/linux/RealTimeThreads.cpp(224) : void WTF::RealTimeThreads::realTimeKitMakeThreadRealTime(uint64_t, uint64_t, uint32_t) ERROR: Failed to make thread real time: GDBus.Error:org.gtk.GDBus.UnmappedGError.Quark._g_2dio_2derror_2dquark.Code1: Could not map pid: Process ids could not be found: 150711 ../../../Source/WTF/wtf/linux/RealTimeThreads.cpp(224) : void WTF::RealTimeThreads::realTimeKitMakeThreadRealTime(uint64_t, uint64_t, uint32_t) ASSERTION FAILED: Completion handler should always be called !m_function WTF/Headers/wtf/CompletionHandler.h(82) : WTF::CompletionHandler<Out(In ...)>::~CompletionHandler() [with Out = void; In = {WebCore::PermissionState}] 1 0x764297f4ca7d void IPC::handleMessageAsync<Messages::NetworkConnectionToWebProcess::QueryStorageAccessPermission, IPC::Connection, WebKit::NetworkConnectionToWebProcess, WebKit::NetworkConnectionToWebProcess, void (WebCore::RegistrableDomain&&, WebCore::RegistrableDomain&&, std::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long>, unsigned long> >, WTF::CompletionHandler<void (WebCore::PermissionState)>&&)>(IPC::Connection&, IPC::Decoder&, WebKit::NetworkConnectionToWebProcess*, void (WebKit::NetworkConnectionToWebProcess::*)(WebCore::RegistrableDomain&&, WebCore::RegistrableDomain&&, std::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long>, unsigned long> >, WTF::CompletionHandler<void (WebCore::PermissionState)>&&)) 2 0x764297f5b6f6 WebKit::NetworkConnectionToWebProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 3 0x76429871aab0 IPC::Connection::dispatchMessage(IPC::Decoder&) 4 0x76429871beed IPC::Connection::dispatchMessage(WTF::UniqueRef<IPC::Decoder>) [clone .part.0] 5 0x76429871c5ef IPC::Connection::dispatchOneIncomingMessage() 6 0x76429b323001 WTF::RunLoop::performWork() 7 0x76429b43163d WTF::RunLoop::RunLoop()::{lambda(void*)#1}::_FUN(void*) 8 0x76429b437b7a WTF::RunLoop::{lambda(_GSource*, int (*)(void*), void*)#1}::_FUN(_GSource*, int (*)(void*), void*) 9 0x7642922a249e ??? 10 0x7642922a2710 g_main_context_dispatch 11 0x76429b434694 WTF::RunLoop::runGLibMainLoopIteration(WTF::RunLoop::MayBlock) 12 0x76429b434ca2 WTF::RunLoop::run() 13 0x764298663deb int WebKit::AuxiliaryProcessMain<WebKit::NetworkProcessMainSoup>(int, char**) 14 0x7642932181ca __libc_start_call_main 15 0x76429321828b __libc_start_main 16 0x63c6d4a86725 _start ERROR: WebKit encountered an internal error. This is a WebKit bug. ../../../Source/WebKit/WebProcess/Network/WebLoaderStrategy.cpp(636) : void WebKit::WebLoaderStrategy::internallyFailedLoadTimerFired() ASSERTION FAILED: validateClientOrigin(m_clientsById, registeredClientIdentifier, clientOrigin) ../../../Source/WebCore/workers/service/server/SWServer.cpp(1239) : void WebCore::SWServer::registerServiceWorkerClient(WebCore::ClientOrigin&&, WebCore::ServiceWorkerClientData&&, const std::optional<WTF::ObjectIdentifierGeneric<WebCore::ServiceWorkerRegistrationIdentifierType, WTF::ObjectIdentifierThreadSafeAccessTraits<long unsigned int>, long unsigned int> >&, WTF::String&&, IsBeingCreatedClient) 1 0x72673b276c05 WebCore::SWServer::registerServiceWorkerClient(WebCore::ClientOrigin&&, WebCore::ServiceWorkerClientData&&, std::optional<WTF::ObjectIdentifierGeneric<WebCore::ServiceWorkerRegistrationIdentifierType, WTF::ObjectIdentifierThreadSafeAccessTraits<unsigned long>, unsigned long> > const&, WTF::String&&, WebCore::SWServer::IsBeingCreatedClient) 2 0x726733fd75c7 WebKit::WebSWServerConnection::registerServiceWorkerClientInternal(WebCore::ClientOrigin&&, WebCore::ServiceWorkerClientData&&, std::optional<WTF::ObjectIdentifierGeneric<WebCore::ServiceWorkerRegistrationIdentifierType, WTF::ObjectIdentifierThreadSafeAccessTraits<unsigned long>, unsigned long> > const&, WTF::String&&, WebCore::SWServer::IsBeingCreatedClient) 3 0x7267339a6819 void IPC::handleMessage<Messages::WebSWServerConnection::RegisterServiceWorkerClient, IPC::Connection, WebKit::WebSWServerConnection, WebKit::WebSWServerConnection, void (WebCore::ClientOrigin&&, WebCore::ServiceWorkerClientData&&, std::optional<WTF::ObjectIdentifierGeneric<WebCore::ServiceWorkerRegistrationIdentifierType, WTF::ObjectIdentifierThreadSafeAccessTraits<unsigned long>, unsigned long> > const&, WTF::String&&)>(IPC::Connection&, IPC::Decoder&, WebKit::WebSWServerConnection*, void (WebKit::WebSWServerConnection::*)(WebCore::ClientOrigin&&, WebCore::ServiceWorkerClientData&&, std::optional<WTF::ObjectIdentifierGeneric<WebCore::ServiceWorkerRegistrationIdentifierType, WTF::ObjectIdentifierThreadSafeAccessTraits<unsigned long>, unsigned long> > const&, WTF::String&&)) [clone .isra.0] 4 0x7267339acddf WebKit::WebSWServerConnection::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 5 0x726733ec5a87 WebKit::NetworkConnectionToWebProcess::dispatchMessage(IPC::Connection&, IPC::Decoder&) 6 0x726733959f82 WebKit::NetworkConnectionToWebProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 7 0x72673411aab0 IPC::Connection::dispatchMessage(IPC::Decoder&) 8 0x72673411beed IPC::Connection::dispatchMessage(WTF::UniqueRef<IPC::Decoder>) [clone .part.0] 9 0x72673411c5ef IPC::Connection::dispatchOneIncomingMessage() 10 0x726736d23001 WTF::RunLoop::performWork() 11 0x726736e3163d WTF::RunLoop::RunLoop()::{lambda(void*)#1}::_FUN(void*) 12 0x726736e37b7a WTF::RunLoop::{lambda(_GSource*, int (*)(void*), void*)#1}::_FUN(_GSource*, int (*)(void*), void*) 13 0x72672dccb49e ??? 14 0x72672dccb710 g_main_context_dispatch 15 0x726736e34694 WTF::RunLoop::runGLibMainLoopIteration(WTF::RunLoop::MayBlock) 16 0x726736e34ca2 WTF::RunLoop::run() 17 0x726734063deb int WebKit::AuxiliaryProcessMain<WebKit::NetworkProcessMainSoup>(int, char**) 18 0x72672ec181ca __libc_start_call_main 19 0x72672ec1828b __libc_start_main 20 0x5a7cacd38725 _start
Attachments
Michael Catanzaro
Comment 1 2026-01-15 09:20:21 PST
If you add the assertion failure to the title of your bug report, that will make searching easier.
Adrian Perez
Comment 2 2026-01-27 15:27:00 PST
EWS
Comment 3 2026-01-28 09:43:05 PST
Committed 306354@main (e82413947588): <https://commits.webkit.org/306354@main> Reviewed commits have been landed. Closing PR #57364 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.