[GTK][WPE] Vinted is crashing when assertions are enabled https://bugs.webkit.org/show_bug.cgi?id=305572

Reviewed by Darin Adler.

There are cases where there is no resource load statistics instance (e.g.
tracking prevention disabled, network session invalidated), which results
in the CompletionHandler for the QueryStorageAccessPermission message to
never be invoked, resulting in the failed assertion. We solve this by
adding a fallback invocation of the completion handler in that case.

* Source/WebKit/NetworkProcess/NetworkConnectionToWebProcess.cpp:
(WebKit::NetworkConnectionToWebProcess::queryStorageAccessPermission):

Canonical link: https://commits.webkit.org/306354@main